--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="text"
-                    android:text="Name" />
+                    android:inputType="text" />
             </LinearLayout>
 
             <LinearLayout
@@ -49,7 +48,7 @@
 
                 <TextView
                     android:id="@+id/textViewContraseña"
-                    android:layout_width="wrap_content"
+                    android:layout_width="149dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/textViewContraseña" />
@@ -60,8 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="text"
-                    android:text="Name" />
+                    android:inputType="text" />
             </LinearLayout>
         </LinearLayout>
 
@@ -84,7 +82,7 @@
 
             <Button
                 android:id="@+id/buttonCredenciales"
-                android:layout_width="210dp"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/buttonCredentiales" />
